long slog. got default arguments working. got type arguments working. insts are really powerful now. rec apply changed to match the inst arg algorithm. rec split is equivalent to previous rec apply. add a thread test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,7 @@ ENDIF()
 FIND_PROGRAM(CCACHE_FOUND ccache)
 IF(CCACHE_FOUND)
     MESSAGE(NOTICE "${.y}ccache${..} found at ${CCACHE_FOUND}")
-    OPTION(USE_CCACHE "use ccache" OFF)
+    OPTION(USE_CCACHE "use ccache" ON)
 ELSE()
     MESSAGE(WARNING "${.y}ccache${..} not found")
     SET(USE_CCACHE OFF)
@@ -164,7 +164,7 @@ OPTION(BUILD_DOCS "build fhatos website/docs" OFF)
 OPTION(SANITIZER "use address sanitizer" OFF)
 OPTION(USE_CCACHE "use ccache" ON)
 OPTION(FOS_SHOW_GIT_PROGRESS "verbose git output on fetch content" ON)
-OPTION(CMAKE_EXPORT_COMPILE_COMMANDS "used with iwyu" ON)
+# OPTION(CMAKE_EXPORT_COMPILE_COMMANDS "used with iwyu" ON)
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################################################################
 ######################## CTEST TESTING #############################
