removed mqtt infrastructure as its now mqtt_cliuent and dsm (distributed shared memory). lst apply now behaves like rec apply where scalars are one to many applied and polys are entry-wise applied --- thus, split and each semantics depending on the obj being applied. this makes type checking via application easy and consistent across polys.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -147,9 +147,9 @@
             MAKE_TESTS(model/fos/util "test_poll" true)
             MAKE_TESTS(process "test_scheduler;test_thread" true)
             MAKE_TESTS(structure "test_router;test_structure" true)
-            MAKE_TESTS(structure/stype "test_dsm;test_heap;test_fs" true)
+            MAKE_TESTS(structure/stype "test_heap;test_fs" true)
             IF(BUILD_MQTT_TESTS)
-                MAKE_TESTS(structure/stype "test_mqtt" true)
+                MAKE_TESTS(structure/stype "test_dsm" true)
             ENDIF()
             MAKE_TESTS(. "test_main;test_furi;test_kernel" true)
             # MAKE_TESTS(model "test_fs" true)
