added mutex guards to the structure virtual class. reduced esp32 exceptions significantly. scheduler loop on a counter.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,12 @@ boards_dir = board
 
 [general]
 build_flags =
-    -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
+    # -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
     -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=60
     -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU0=0
     -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU1=0
     -DCONFIG_BOOTLOADER_WDT_DISABLE_IN_USER_CODE=1
+    # -DCONFIG_ESP32_PTHREAD_TASK_PRIO_DEFAULT=1
 
 [mmadt]
 build_flags =
