--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ boards_dir = board
 
 [general]
 build_flags =
-    # -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
+     -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
     -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=60
     -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU0=0
     -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU1=0
