refactored file system. split into hpp and cpp with native and esp32 implementations. now part of the fos models package. fixed a bug in test_kernel -- aroudn importing fos models.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ boards_dir = board
 
 [general]
 build_flags =
-     -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
+    -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
     -DCONFIG_ESP_TASK_WDT_TIMEOUT_S=60
     -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU0=0
     -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU1=0
@@ -94,9 +94,10 @@ build_flags =
     -DFOS_MACHINE_MODEL=$BOARD
     -DFOS_MACHINE_SUBOS=$PIOFRAMEWORK/$PIOPLATFORM
     -DFMT_HEADER_ONLY
+    -DCONFIG_LITTLEFS_FOR_IDF_3_2
 
 [esp32]
-platform = espressif32
+platform = espressif32@6.4.0
 #build_type = debug
 #upload_flags = --no-stub
 upload_speed = 921600
@@ -199,7 +200,7 @@ lib_deps =
     Update
     ESPmDNS
     FS
-    LittleFS
+    littlefs
     knolleary/PubSubClient@^2.8
     extern/fmt-arduino-10.1.1
 # fastled/FastLED@^3.8.0
