--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -145,9 +145,10 @@
             MAKE_TESTS(language/mmadt "test_mmadt_compiler;test_mmadt_parser;test_mmadt_inst;test_mmadt_fluent" true)
             MAKE_TESTS(language/processor "test_processor" true)
             MAKE_TESTS(model/fos/util "test_poll" true)
+            MAKE_TESTS(model/fos/io "test_fs" true)
             MAKE_TESTS(process "test_scheduler;test_thread" true)
             MAKE_TESTS(structure "test_router;test_structure" true)
-            MAKE_TESTS(structure/stype "test_heap;test_fs" true)
+            MAKE_TESTS(structure/stype "test_heap" true)
             IF(BUILD_MQTT_TESTS)
                 MAKE_TESTS(structure/stype "test_dsm" true)
             ENDIF()
