fixed a long standing bug in esp32 around router::resolve. nested mutex issue -- also, pulled auto_prefix data structure to main memory as opposed to PSRAM given its heavy usage.

--- a/platformio.ini
+++ b/platformio.ini
@@ -57,17 +57,21 @@ auto_psalloc_bytes = 1
 build_flags =
     -DBOARD_HAS_PSRAM=1
     -DSPIRAM_USE_MALLOC=1
+    -DCONFIG_SPIRAM=1
     -DCONFIG_SPIRAM_USE=1
     -DCONFIG_SPIRAM_SPEED_80M=1
+    -DCONFIG_SPIRAM_BOOT_INIT=1
     -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=${this.auto_psalloc_bytes}
     -DFOS_EXTERNAL_MEMORY_LIMIT=${this.auto_psalloc_bytes}
     -DCONFIG_SPIRAM_CACHE_WORKAROUND=1
+    -DCONFIG_FREERTOS_TASK_CREATE_ALLOW_EXT_MEM=1
     -mfix-esp32-psram-cache-issue
+    -DFOS_PRE_PSRAM_THREAD_STACK_SIZE=16384
 
 [memory]
 build_flags =
     -DARDUINO_LOOP_STACK_SIZE=24288
-    -DFOS_ESP_THREAD_STACK_SIZE=16192
+    -DFOS_ESP_THREAD_STACK_SIZE=16384
 
 [debug]
 build_flags =
