--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -42,6 +42,7 @@ IF(BUILD_DOCS)
     MESSAGE(CHECK_START "${.y}CMaking AsciiDoc Documentation${..}")
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs/src/runner/fhatos-doc-code.py DESTINATION ${CMAKE_BINARY_DIR}/docs/build)
     FILE(COPY ${CMAKE_SOURCE_DIR}/scripts/colors.py DESTINATION ${CMAKE_BINARY_DIR}/docs/build)
+    FILE(COPY ${CMAKE_SOURCE_DIR}/data/boot/boot_config.obj DESTINATION ${CMAKE_BINARY_DIR}/docs/build/data/boot)
     FILE(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/docs/images/diagrams)
     ADD_CUSTOM_TARGET(asciidoc ALL DEPENDS main_runner boot_runner)
     SET(FILES ${CMAKE_SOURCE_DIR}/docs/fhatos.adoc)
