refactoring package structure. more work on module installs and imports.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,8 @@
     ENDIF()
     IF(BUILD_TESTS)
         MESSAGE("\n${.g}=====> ${.r}P${.y}R${.m}O${.y}C${.b}E${.m}S${.g}S${.c}I${.y}N${.r}G ${.m}T${.c}E${.g}S${.r}T${.y}S${..}\n")
-        FILE(COPY_FILE "${CMAKE_SOURCE_DIR}/test/data/boot/test_boot_config.obj" "${CMAKE_BINARY_DIR}/data/boot/test_boot_config.obj")
+        FILE(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/test/data/boot/")
+        FILE(COPY_FILE "${CMAKE_SOURCE_DIR}/test/data/boot/test_boot_config.obj" "${CMAKE_BINARY_DIR}/test/data/boot/test_boot_config.obj")
         UNSET(CMAKE_CXX_INCLUDE_WHAT_YOU_USE)
         MESSAGE(STATUS "target linked libraries: ${TARGET_LIBRARIES}")
         SET(CATCH_TESTS tests)
