--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -46,7 +46,7 @@ IF(BUILD_DOCS)
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs/fhatos_intro.adoc DESTINATION ${CMAKE_BINARY_DIR}/docs)
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs/fhatos_mmadt.adoc DESTINATION ${CMAKE_BINARY_DIR}/docs)
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs/fhatos_router.adoc DESTINATION ${CMAKE_BINARY_DIR}/docs)
-    FILE(COPY ${CMAKE_SOURCE_DIR}/data/boot/boot_config.obj DESTINATION ${CMAKE_BINARY_DIR}/docs/build/data/boot)
+    FILE(COPY ${CMAKE_SOURCE_DIR}/docs/data/boot/doc_boot_config.obj DESTINATION ${CMAKE_BINARY_DIR}/docs/build/data/boot)
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs/images DESTINATION ${CMAKE_BINARY_DIR}/docs)
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs/css DESTINATION ${CMAKE_BINARY_DIR}/docs)
     FILE(COPY ${CMAKE_SOURCE_DIR}/docs/highlight DESTINATION ${CMAKE_BINARY_DIR}/docs)
