fixed a fiber bundle bug on esp32. removed defaults on virtual functions.

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,7 +101,8 @@ build_flags =
     -DCONFIG_LITTLEFS_FOR_IDF_3_2
 
 [esp32]
-platform = espressif32@6.4.0
+platform = espressif32@6.10.0
+framework = arduino
 #build_type = debug
 #upload_flags = --no-stub
 upload_speed = 921600
