refactor boot loader and kernel api. added skip parameter to fhat-dev -- skip os and or boot upload and build. lots of additions to the standard boot loader obj. added mmadt/pprint inst (pretty print). rewrote the esp32 wifi obj -- super headache getting it to work nicely with mqtt client when connections are lost. refactor q_proc and q_sub and q_default. new interface for message passing -- mailbox and post. for inter processor communication there is LocalPost. For distributed, there is MqttClient -- soon to be called MqttPost. gutted PubSubClient library in favor of espAsyncMqtt.

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,10 +4,13 @@
 
 [platformio]
 name = FhatOS
-version = 0.1-alpha
 description = A Distributed Operating System for Embedded Microprocessors
 extra_configs = .wifi.ini
 boards_dir = board
+
+[fhatos]
+name = FhatOS
+version = 0.1-alpha
 
 #####################################
 ##### ESP32/ESP8266 BUILD FLAGS #####
@@ -56,12 +59,15 @@ build_flags =
 auto_psalloc_bytes = 1
 build_flags =
     -DBOARD_HAS_PSRAM=1
-    -DSPIRAM_USE_MALLOC=1
     -DCONFIG_SPIRAM=1
     -DCONFIG_SPIRAM_USE=1
+    -DCONFIG_SPIRAM_TYPE_AUTO=1
+    -DCONFIG_SPIRAM_SIZE=-1
     -DCONFIG_SPIRAM_SPEED_80M=1
     -DCONFIG_SPIRAM_BOOT_INIT=1
+    -DCONFIG_SPIRAM_USE_MALLOC=1
     -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=${this.auto_psalloc_bytes}
+    -DCONFIG_SPIRAM_MALLOC_RESERVE_INTERNAL=0
     -DFOS_EXTERNAL_MEMORY_LIMIT=${this.auto_psalloc_bytes}
     -DCONFIG_SPIRAM_CACHE_WORKAROUND=1
     -DCONFIG_FREERTOS_TASK_CREATE_ALLOW_EXT_MEM=1
@@ -70,8 +76,7 @@ build_flags =
 
 [memory]
 build_flags =
-    -DARDUINO_LOOP_STACK_SIZE=24288
-    -DFOS_ESP_THREAD_STACK_SIZE=16384
+    -DARDUINO_LOOP_STACK_SIZE=32768
 
 [debug]
 build_flags =
@@ -92,13 +97,14 @@ build_flags =
     -DUNITY_OUTPUT_COLOR
     -DUNITY_INCLUDE_PRINT_FORMATTED
     -mtext-section-literals
-    -DFOS_NAME=${platformio.name}
-    -DFOS_VERSION=${platformio.version}
+    -DFOS_NAME=${fhatos.name}
+    -DFOS_VERSION=${fhatos.version}
     -DFOS_MACHINE_ARCH=$PIOENV
     -DFOS_MACHINE_MODEL=$BOARD
     -DFOS_MACHINE_SUBOS=$PIOFRAMEWORK/$PIOPLATFORM
     -DFMT_HEADER_ONLY
     -DCONFIG_LITTLEFS_FOR_IDF_3_2
+    -DMQTT_MAX_PACKET_SIZE=512
 
 [esp32]
 platform = espressif32@6.10.0
@@ -206,8 +212,9 @@ lib_deps =
     ESPmDNS
     FS
     littlefs
-    knolleary/PubSubClient@^2.8
     extern/fmt-arduino-10.1.1
+    me-no-dev/AsyncTCP@^3.3.2
+    bertmelis/espMqttClient@^1.7.0
 # fastled/FastLED@^3.8.0
 # dvarrel/ESPping@^1.0.4
 # lennarthennigs/ESP Telnet@^2.2.1
