--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ build_flags =
     -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU0=0
     -DCONFIG_ESP_TASK_WDT_CHECK_IDLE_TASK_CPU1=0
     -DCONFIG_BOOTLOADER_WDT_DISABLE_IN_USER_CODE=1
-    # -DCONFIG_ESP32_PTHREAD_TASK_PRIO_DEFAULT=1
+# -DCONFIG_ESP32_PTHREAD_TASK_PRIO_DEFAULT=1
 
 [mmadt]
 build_flags =
@@ -47,6 +47,7 @@ build_flags =
     -DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
     -DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
     -DCONFIG_SPIRAM_TRY_ALLOCATE_WIFI_LWIP=1
+    -DCONFIG_LWIP_IPV6=0
 
 [bluetooth]
 build_flags =
@@ -78,12 +79,26 @@ build_flags =
 build_flags =
     -DARDUINO_LOOP_STACK_SIZE=32768
 
+[mqtt]
+build_flags =
+    -DCONFIG_ASYNC_TCP_MAX_ACK_TIME=5000
+    -DCONFIG_ASYNC_TCP_PRIORITY=10
+    -DCONFIG_ASYNC_TCP_QUEUE_SIZE=64
+# force async_tcp task to be on same core as the app (default is core 0)
+  #  -DCONFIG_ASYNC_TCP_RUNNING_CORE=1
+# reduce the stack size (default is 16K)
+    #-DCONFIG_ASYNC_TCP_STACK_SIZE=4096
+
 [debug]
 build_flags =
     -DCONFIG_ESP_SYSTEM_PANIC_GDBSTUB=1
+#-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
+#-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
 
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
+######################################
+
 ######################################
 
 [common]
@@ -105,6 +120,8 @@ build_flags =
     -DFMT_HEADER_ONLY
     -DCONFIG_LITTLEFS_FOR_IDF_3_2
     -DMQTT_MAX_PACKET_SIZE=512
+
+######################################
 
 [esp32]
 platform = espressif32@6.10.0
@@ -156,13 +173,11 @@ build_flags =
     ${mmadt.build_flags}
     ${wifi.build_flags}
     ${memory.build_flags}
+    ${mqtt.build_flags}
     -DARDUINO_USB_CDC_ON_BOOT=1
-#-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
-#-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
-#-DCONFIG_ADC_CAL_LUT_ENABLE=0
-#-DCONFIG_LWIP_IPV6=0
-#-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
-#-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
+
+
+
 # default 65536
 ###############################
 ####### HEAP DEBUGGING ########
@@ -213,11 +228,8 @@ lib_deps =
     FS
     littlefs
     extern/fmt-arduino-10.1.1
-    me-no-dev/AsyncTCP@^3.3.2
+    ESP32Async/AsyncTCP@^3.4.4
     bertmelis/espMqttClient@^1.7.0
-# fastled/FastLED@^3.8.0
-# dvarrel/ESPping@^1.0.4
-# lennarthennigs/ESP Telnet@^2.2.1
 extends = serial # ota
 
 [serial]
